solving swagger and Employee + Store endpoints tested.
